Fix: CSS alignment issue when used in Bootstrap env

--- a/src/css/fontpicker.css
+++ b/src/css/fontpicker.css
@@ -68,6 +68,7 @@ input.font-picker {
 .fp__heart svg {
   height: 1em;
   pointer-events: none;
+  vertical-align: baseline;
 
   --fp-heart-color: var(--fp-border-color-rgb);
 
